Add ICU admissions talk

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <a href="./stat_talk.html">Basic statistics and epidemiology</a>
 <p>Talk for FRCA tutorial, Blackburn</p>
+<a href="./icu_admit.html">How to get your patient into ICU</a>
+<p>Talk on critical care admission</p>
 
 </body>
 </html>
