Add CFR talk to index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <a href="./stat_talk.html">Basic statistics and epidemiology</a>
 <p>Talk for FRCA tutorial, Blackburn</p>
 <a href="./icu_admit.html">How to get your patient into ICU</a>
-<p>Talk on critical care admission</p>
+<p>Talk on critical care admission for grand round</p>
+<a href="./RespEmerg.html">Respiratory Emergencies</a>
+<p>Talk for community first responders. (Needs pictures adding)</p>
 
 </body>
 </html>
