Added pictures to CFR talk

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a href="./icu_admit.html">How to get your patient into ICU</a>
 <p>Talk on critical care admission for grand round</p>
 <a href="./RespEmerg.html">Respiratory Emergencies</a>
-<p>Talk for community first responders. (Needs pictures adding)</p>
+<p>Talk for community first responders</p>
 
 </body>
 </html>
