NIV for induction

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <p>Talk on critical care admission for grand round</p>
 <a href="./RespEmerg.html">Respiratory Emergencies</a>
 <p>Talk for community first responders</p>
+<a href="./NIV-rpubs.html">NIV on C8</a>
+<p>Description of NIV for induction</p>
 
 </body>
 </html>
