--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <p>Talk for community first responders</p>
 <a href="./NIV-rpubs.html">NIV on C8</a>
 <p>Description of NIV for induction</p>
+<a href="./airways.html">Airways</a>
+<p>Airways talk for General Practice (draft)</p>
 
 </body>
 </html>
