Only missing ventilator picture

--- a/airways.html
+++ b/airways.html
@@ -14,6 +14,20 @@
         font-weight: normal;
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+
+      /* Two-column layout */
+      .left-column {
+        width: 48%;
+        float: left;
+      }
+      .right-column {
+        width: 48%;
+        float: right;
+      }
+      .footnote {
+        position: absolute;
+        bottom: 3em;
+      }
     </style>
   </head>
   <body>
@@ -139,7 +153,7 @@ A label of predominantly(?) *asthma* may be appropriate if there is
 
 ## Occupational asthma
 
-![Positive oasys diary]()
+.center[![Positive oasys diary](./assets/airways/oasys.jpg)]
 
 - "What do you do?"
 - "Is your chest better away from work?"
@@ -152,15 +166,16 @@ Several [occupations](http://www.hse.gov.uk/asthma/) have a high risk of occupat
 
 #### See [BTS / SIGN](https://www.brit-thoracic.org.uk/standards-of-care/guidelines/btssign-british-guideline-on-the-management-of-asthma/)
 
-1. Start an inhaled steroid early
+.left-column[1. Start an inhaled steroid early
 2. Combination ICS / LA&beta;A
 3. Crank up the ICS dose
 4. Adjuncts, particularly montelukast
 5. Get help from secondary care
    - Confirm diagnosis
-   - Small print stuff ([Omalizumab](https://www.nice.org.uk/guidance/ta278/chapter/1-Guidance), [Mepolizumab](https://www.nice.org.uk/guidance/TA431/chapter/1-Recommendations)), antifungals, thermoplasty, etc)
+   - Small print stuff ([Omalizumab](https://www.nice.org.uk/guidance/ta278/chapter/1-Guidance), [Mepolizumab](https://www.nice.org.uk/guidance/TA431/chapter/1-Recommendations), antifungals, thermoplasty, etc)
+]
 
-- Smoking cessation
+.right-column[- Smoking cessation
 - Aggrevating factors (pets, hobbies, jobs)
 - Treat alternate or co-existing diagnoses
    - Hayfever
@@ -168,7 +183,7 @@ Several [occupations](http://www.hse.gov.uk/asthma/) have a high risk of occupat
    - [Dysfunctional breathing](http://err.ersjournals.com/content/25/141/287.long)
    - [Vocal cord dysfunction](https://www.ncbi.nlm.nih.gov/pubmed/27575803)
 - Check and recheck drug adherence
-
+]
 ---
 
 ## COPD?
@@ -195,8 +210,12 @@ This label covers a broad range of clinical phenotypes. It can end up as a diagn
 
 #### "Textbook COPD"
 
-![Obstructed spirometry]()
+.left-column[
+![Obstructed spirometry](./assets/airways/fv.png)
+![Obstructed spirometry](./assets/airways/vtime.png)
+]
 
+.right-column[
 - SA&beta;A
 - LAMA
 - LA&beta;A
@@ -204,6 +223,7 @@ This label covers a broad range of clinical phenotypes. It can end up as a diagn
 - (Short trial of aminophylline but don't persevere if patient doesn't report symptomatic benefit)
 
 Don't let a focus on pharmacology distract from the far more important smoking cessation and pulmonary rehabilitation.
+]
 
 ---
 
@@ -228,13 +248,13 @@ Don't let a focus on pharmacology distract from the far more important smoking c
 
 #### Destruction of lung parenchyma visible on CXR or CT with low TL<sub>CO</sub> (if measured)
 
-![Emphysema CT]()
+.left-column[![Emphysema CT](./assets/airways/Emphysema.jpg)]
 
-- Limited easy treatment options here
+.right-column[- Limited easy treatment options here
 - Pulse oximetry +/- 6 minute walk, then LTOT assessment and or ambulatory oxygen <a href="https://www.brit-thoracic.org.uk/document-library/clinical-information/oxygen/home-oxygen-guideline-(adults)/bts-guidelines-for-home-oxygen-use-in-adults/">if appropriate</a>
 - (Bullectomy if significant functional impairment and single large bulla)
 - (Lung volume reduction in small group of carefully selected patients with heterogenous disease and otherwise optimised (pulmonary rehabilitation, smoking cessation, etc))
-- (Lung transplant assessment)
+- (Lung transplant assessment)]
 
 ---
 
@@ -297,19 +317,37 @@ Beware the "rescue pack" abuser - oral prednisolone every month is **far, far to
 
 ## Bronchiectasis
 
-![Bronchiectasis CT]()
+.left-column[![Bad bronchiectasis CT](./assets/airways/bronchiectasis.jpg)
+Severe
+]
+.right-column[![Mild bronchiectasis](./assets/airways/bronchiectasis-mild.jpg)
+Mild - is this much different from chronic bronchitis?
+]
 
 ---
 
 ## Obliterative bronchiolitis
 
-![OB CT]()
+.left-column[![OB CT](./assets/airways/ob.jpg)]
+.right-column[- [Confusing terminology](http://www.nejm.org/doi/full/10.1056/NEJMra1204664?af=R&rss=currentIssue)
+- Lung insult in early life or other inhalational insult
+- Fixed airflow obstruction
+- Supportive treatment
+- Macrolides?
+]
 
 ---
 
 ## Excessive central airways collapse
 
-![Excessive central airways collapse CT]()
+.left-column[![Inspiration](./assets/airways/ecac-insp.jpg)
+Inspiration
+]
+.right-column[![Expiration](./assets/airways/ecac-exp.jpg)
+Expiration
+]
+
+Perhaps [CPAP](https://www.ncbi.nlm.nih.gov/pubmed/24137262) as a treatment?
 
 ---
 
