Final pictures for GP airways talk

--- a/airways.html
+++ b/airways.html
@@ -264,7 +264,9 @@ Don't let a focus on pharmacology distract from the far more important smoking c
 
 Home nocturnal non invasive ventilation is [increasingly an option](http://erj.ersjournals.com/content/48/suppl_60/OA3527) for patients with raised pCO<sub>2</sub> when stable, particularly if there is significant obesity and / or acute presentations with decompensated type 2 respiratory failure.
 
-![Ventilator]()
+.left-column[![Ventilator bag](./assets/airways/vent_bag.jpg)]
+.right-column[![Ventilator](./assets/airways/vent.jpg)]
+
 
 ---
 
