--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <a href="./NIV-rpubs.html">NIV on C8</a>
 <p>Description of NIV for induction</p>
 <a href="./airways.html">Airways</a>
-<p>Airways talk for General Practice (draft)</p>
+<p>Airways talk for General Practice</p>
 
 </body>
 </html>
