Respiratory support talk

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <p>Description of NIV for induction</p>
 <a href="./airways.html">Airways</a>
 <p>Airways talk for General Practice</p>
+<a href="./resp_support.html">Supporting the respiratory system</a>
+<p>Talk for G(I)M training day</p>
 
 </body>
 </html>
