Grand round talk

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <p>Airways talk for General Practice</p>
 <a href="./resp_support.html">Supporting the respiratory system</a>
 <p>Talk for G(I)M training day</p>
+<a href="./grand_round_niv.html">Grand round 2019</a>
+<p>Grand round, October 2019</p>
 
 </body>
 </html>
