Added oximetry traces

--- a/grand_round_niv.html
+++ b/grand_round_niv.html
@@ -31,7 +31,7 @@ class: center, middle
 
 ---
 
-## A Case
+## A case
 
 - 69 year old man
 - Ex smoker 3 years, 50 pack year history
@@ -93,7 +93,12 @@ Prevalence may be as high as 20% of those with BMI above 40
 
 ## Hypercapnia and sleep apnoea
 
-.center[![OSA and OHS](./assets/gr-niv/osa_ohs.jpg)]
+.center[![OSA and OHS](./assets/gr-niv/ohs_osa.jpg)]
+
+---
+
+## Lone obesity hypoventilation
+
 .center[![Lone OHS](./assets/gr-niv/ohs.jpg)]
 
 ---
